applications/simple-go-service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-service-a
  namespace: applications
  labels:
    app.kubernetes.io/name: simple-go-service-a
    app.kubernetes.io/version: v0.0.16
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-go-service-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-go-service-a
        app.kubernetes.io/version: v0.0.16
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: simple-go-service-a
          image: ghcr.io/kse-whatisyouralibi/simple-go-service-a:v0.0.17
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
